A bit more styling

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 base_url = "https://tmbu.ericscouten.com"
 
-title = "Eric Scouten :: This Might Be Useful"
+title = "This Might Be Useful"
 description = "A linkroll of things I've found that might be useful someday."
 default_language = "en"
 
