Tweak display of "found via" layout

--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,7 @@ endmark = true
 es_site = "tmbu"
 map_clustering = false
 is_dark = true
+page_date_prefix = "Found on"
 
 [[taxonomies]]
 name = "tag"
