--- a/config.toml
+++ b/config.toml
@@ -5,12 +5,11 @@ description = "A linkroll of things I've found that might be useful someday."
 default_language = "en"
 
 theme = "zola-es-theme"
-
 compile_sass = true
 build_search_index = true
 
-generate_feed = true
-feed_filename = "rss.xml"
+generate_feeds = true
+feed_filenames = ["rss.xml"]
 
 [search]
 index_format = "elasticlunr_json"
